--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,15 @@
     text-align: center;
     padding-top: 3em;
 }
+.row > div {
+    float: left;
+    height: 100px;
+    width: 100px;
+
+}
+.row {
+    margin: 0 auto;
+    width: 302px;
+    clear: both;
+}
+
