--- a/styles.css
+++ b/styles.css
@@ -15,13 +15,21 @@
 }
 .top {
     border-bottom: 1px black solid;
+cursor: pointer;
 }
+
 .bottom {
     border-top: 1px blue solid;
+cursor: pointer;
 }
 .left {
     border-right: 1px yellow solid;
+cursor: pointer;
 }
 .right {
     border-left: 1px green solid;
+cursor: pointer;
+}
+.center {
+    cursor: pointer;
 }
