--- a/styles.css
+++ b/styles.css
@@ -2,35 +2,34 @@
     text-align: center;
     padding-top: 3em;
 }
-.row > div {
+
+.row>div {
     float: left;
     height: 100px;
     width: 100px;
-
+    cursor: pointer;
 }
+
 .row {
-   clear: both;
+    clear: both;
     margin: 0 auto;
     width: 302px;
-   
 }
+
 .top {
     border-bottom: 1px black solid;
-cursor: pointer;
 }
 
 .bottom {
     border-top: 1px black solid;
-cursor: pointer;
 }
+
 .left {
     border-right: 1px black solid;
-cursor: pointer;
 }
+
 .right {
     border-left: 1px black solid;
-cursor: pointer;
 }
-.center {
-    cursor: pointer;
-}
+
+.center {}
