--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,15 @@
 #board {
     text-align: center;
-    padding-top: 3em;
+    padding-top: 3rem;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.row {
+    clear: both;
+    margin: 0 auto;
+    width: 302px;
+    line-height: 100px;
+    font-size: 50px;
 }
 
 .row>div {
@@ -8,12 +17,6 @@
     height: 100px;
     width: 100px;
     cursor: pointer;
-}
-
-.row {
-    clear: both;
-    margin: 0 auto;
-    width: 302px;
 }
 
 .top {
